kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: external.${SECRET_DOMAIN}
      #cloudflare_gateway_addr - external
      lbipam.cilium.io/ips: "192.168.1.110"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: ctc
      protocol: HTTP
      port: 80
      hostname: "admin.cozmatransport.eu"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: internal.${SECRET_DOMAIN}
      #cluster_gateway_addr - internal
      lbipam.cilium.io/ips: "192.168.1.105"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
    - name: rd-nat
      protocol: TCP
      port: 21115
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: rd-tcp
      protocol: TCP
      port: 21116
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: rd-tcp-relay
      protocol: TCP
      port: 21117
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: rd-ws
      protocol: TCP
      port: 21118
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: rd-udp
      protocol: UDP
      port: 21116
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: UDPRoute
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
